--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6629e5f0",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[(0.0, 0.0), (0.0, 0.0), (0.0, 0.0)], [(0.0, 0.0), (0.0, 0.0), (0.0, 0.0)], [(0.0, 0.0), (0.0, 0.0), (0.0, 0.0)]], [[(0.0, 0.0), (0.0, 0.0), (0.0, 0.0)], [(0.0, 0.0), (0.0, 0.0), (0.0, 0.0)], [(0.0, 0.0), (0.0, 0.0), (0.0, 0.0)]]]\n",
+      "[([[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]], \n",
+      "\n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]), ([[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]], \n",
+      "\n",
+      " [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]])]\n",
       "[0, 0, 0]\n",
       "[0, 1, 0]\n",
       "[0, 0, 0]\n"
@@ -35,10 +47,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11d1e2f70>]"
+       "[<matplotlib.lines.Line2D at 0x1075c16a0>]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -65,14 +77,22 @@
     "some_cell_w = []\n",
     "for _ in range(100):\n",
     "#     print(model.preprocessing_stage[1][1][1].v)\n",
-    "    some_cell_v.append(model.preprocessing_stage[1][1][1].v)\n",
-    "    some_cell_w.append(model.preprocessing_stage[1][1][1].w)\n",
+    "    some_cell_v.append(model.preprocessing_stage[1].v[1,1])\n",
+    "    some_cell_w.append(model.preprocessing_stage[1].w[1,1])\n",
     "    model.update(na, 10e-3)\n",
     "\n",
     "plt.figure(figsize=(8,8))\n",
     "ax = plt.subplot(111)\n",
     "ax.plot(np.arange(0,100,1), some_cell_v, 'b-', label=\"v\", linewidth=1)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9962775b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
